# MastersThesis

./: .gitignore  CMakeLists.txt  Interaction.h5  Interaction2.csv  Readme.md  Readme.txt  SO_57342918_h5py.h5  action.cc  action.hh  construction.cc  detector.cc  detector.hh  generator.cc  generator.hh  hit.hh  run.cc  run.mac  sim.cc  stepping.cc  stepping.hh  vol  xyplane  xyplane.h5
Analysis/: Image.py  ReadH5.py  extractdata.py  find_interactions.py  heatmap.py  interactions&angle  muondist.py  plotter1_outdated.py  test.py  trackreconstruction.py  vertexfinder.py
Analysis/GeometryRemade/: geometry.py
Analysis/Outdated/: RedundantImaging.py  muondist.py  plotter1_outdated.py
Analysis/TrackReconstruction/: CompareAgainstControl.py  FindInteractions.py  Image.py  IntroduceError.py  ReadH5.py  ScatterAnglePlots.py  TrackReconstruction.py  VertexFinder.py  Voxel.py  test.py
ConstructionSetups/: ConcreteWithSteelRod.cc  RustedSteelInConcrete.cc  SteelSlab.cc
ConstructionSetups/RealisticConcreteBeam/: Disconnected.cc  RealisticConcreteWithSteel.cc  RustedSteelBeam.cc  (+1 more)
data/: DetectorHits.csv  Initial_Muon_Dist.csv  interactions&angle.csv
include/: CSVoutput.hh  H5output.hh  ParticleData.h  construction.hh  detector.hh  generator.hh  hit.hh  physics.hh  run.hh  stepping.hh
sim/: CMakeLists.txt  action.cc  action.hh  construction.cc  construction.hh  generator.cc  generator.hh  key  key.pub  physics.cc  run.cc  run.hh  sim.cc
src/: CSVoutput.cc  H5output.cc  ParticleData.cxx  construction.cc  detector.cc  generator.cc  hit.cc  physics.cc  run.cc  stepping.cc
(+7 files in other folders)
